--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 /*Progress bar*/
-.bar {
+/* .bar {
     position: fixed;
     top: 0;
     left: 0;
@@ -7,18 +7,18 @@
     width: 100%;
     height: 100%;
     max-height: 2em;
-}
-.bar:hover {
+} */
+/* .bar:hover {
     background-color: rgb(211, 125, 12);
-}
+} */
 
-.progress {
+/* .progress {
     background-color: rgb(0, 95, 139);
     width: 0%;
     height: 100%;
-}
+} */
 
-.title-copy {
+/* .title-copy {
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     padding-left: 1em;
@@ -26,12 +26,12 @@
     line-height: 2;
     font-weight: 600;
     font-size: 1em;
+    opacity: 0;
+} */
     /* top: 0;
     left: 0; */
     /* display: flex;
     align-self: center; */
-    opacity: 0;
-}
 
 
 
