--- a/css/main.css
+++ b/css/main.css
@@ -36,35 +36,11 @@
 
 
 
-
 /*Doc styling*/
 body {
     font-family: 'Courier New', Courier, monospace;
     /* background-color: #732D3B; */
-}
-.container, .intro {
-    margin: 0 auto;
-    padding: 0 5em;
-    max-width: 1000px;
-    background-color: white;
-}
-.intro { 
-    padding-top: 1.5em;
-}
-
-.summary p {
-    padding-bottom: 1em;
-}
-
-.details {
-    padding-top: 1em;
-    padding-bottom: 1em;
-}
-section {
-    padding: .5em;
-}
-h1 {
-    text-align: center;
+    padding-top: 32px;
 }
 strong {
     font-weight: 600;
@@ -72,10 +48,22 @@ strong {
 em {
     font-style: italic;
 }
+
+
+.container, .header, .scene {
+    margin: 0 auto;
+    padding: 0 5em;
+    max-width: 1000px;
+    background-color: rgb(255, 255, 255);
+}
+.header { 
+    padding: 1.5em 0;
+}
 .title {
     /* padding-top: 1em; */
     font-weight: 600;
     font-size: 1.5em;
+    text-align: center;
 }
 .subtitle {
     font-weight: 600;
@@ -83,30 +71,56 @@ em {
     /* padding-bottom: 1.5em; */
     text-align: center;
 }
+.read-time {
+    padding-top: 1em;
+    font-weight: 600;
+    text-align: center;
+}
+.summary p {
+    padding-bottom: 1em;
+}
+.details {
+    padding-top: 1em;
+    padding-bottom: 1em;
+}
+
+
+.scene {
+    padding: 1em 0;
+}
+
+.nav ul {
+    padding-top: 1em;
+    padding-left: 2.5em;
+}
 .speaker {
     font-weight: 600;
     /* font-size: 1.2em; */
     padding-bottom: .25em;
     text-transform: uppercase;
+    text-align: center;
 }
-.chunk, .scene {
+.chunk, .descrip, .scene-title {
     padding: .5em 0;
-}
-.scene, .chunk {
     max-width: 550px;
     margin: 0 auto;
+}
+.descrip {
+    padding: 1em 0;
 }
 .quote {
     margin: 0 auto;
     max-width: 300px;
+    padding: .5em 0;
 }
 .scene-minor {
     padding: 1em 0;
 }
-
 .scene-title {
     font-weight: 600;
-    padding: 1em 0;
     font-size: 1.3em;
 }
-
+.footer {
+    padding: 7em 0;
+    text-align: center;
+}
